Changing setup to ensure good display on iOs devices

--- a/app/assets/stylesheets/pages/_layout.scss
+++ b/app/assets/stylesheets/pages/_layout.scss
@@ -1,14 +1,4 @@
-body {
-  padding-top: env(safe-area-inset-top, 20px);
-  padding-bottom: env(safe-area-inset-bottom, 20px);
-  padding-left: env(safe-area-inset-left, 10px);
-  padding-right: env(safe-area-inset-right, 10px);
-}
-
-header {
-  padding-top: env(safe-area-inset-top, 20px);
-}
-
-footer {
-  padding-bottom: env(safe-area-inset-bottom, 20px);
+html {
+  min-height: calc(100% + env(safe-area-inset-top));
+  padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
 }
